# game-of-life

./: CMakeLists.txt  README.md
share/: CMakeLists.txt
share/gol-test/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/gol/: CMakeLists.txt  GOL.cpp  GOL.h
